@@ -180,6 +180,8 @@ test.ogg audio/ogg oxx
 test.ogg audio/x-vorbis+ogg x
 # Copied from http://bugzilla.gnome.org/show_bug.cgi?id=566661#c1
 msg0001.gsm audio/x-gsm oxo
+# Copied from www.freemxf.org
+small_wav.mxf application/mxf
 
 # other
 text.pdf application/pdf
